--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-h1, h2, h3, p, ul, a, input, label, button{
+h1, h2, h3, h4, p, ul, a, input, label, button{
 	font-family: 'Quicksand', serif !important;
 }
 html{
@@ -148,11 +148,15 @@ img[src=""] {
 }
 
 /* BTNS END */
-
+/* Pages */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+/* End Pages */
 /* property */
 #property-listings{
-	overflow-y: auto;
-	overflow-x: hidden;
 	height: 835px;
 }
 /* PROPERTY END */
@@ -162,7 +166,7 @@ img[src=""] {
 	text-align: center;
 	color: white;
 	position: relative;
-	top: 40%;
+	top: 200px;
 }
 #listings-row{
 	margin-right: -28px;
@@ -205,7 +209,7 @@ img[src=""] {
 .splash-section{
 	background: #000;
 	position: relative;
-    width: 100%;
+  width: 100%;
 	/*animation:fading 3s ease-in;
 	-webkit-animation:fading 3s ease-in;
 	*/
@@ -217,7 +221,7 @@ img[src=""] {
 	height: 55px;
 }
 #map{
-	height: 835px;
+	height: 880px;
 	width: 900px;
 }
 #moveloc #autocomplete{
@@ -511,6 +515,7 @@ input::-moz-focus-outer {
 and (min-width: 850px)
 and (max-width: 1400px){
 	#map{
+		height: 522px;
 		width: 600px;
 	}
 	#listings-row #filter-panel{
