--- a/public/css/main.css
+++ b/public/css/main.css
@@ -534,4 +534,22 @@ and (max-width: 1750px){
 		width: initial;
 	}
 }
+@media only screen
+and (min-width: 300px)
+and (max-width: 767px){
+	.splash-title{
+			top: initial !important;
+	}
+	#filter-panel-home{
+			top: initial !important;
+	}
+	.panel-default .img-rounded{
+		margin-top: 20px !important;
+		width: 50% !important;
+	}
+	.navbar-nav{
+		margin: 7px -15px !important;
+
+	}
+}
 /* MOBILE END */
