--- a/public/css/main.css
+++ b/public/css/main.css
@@ -512,14 +512,119 @@ input::-moz-focus-outer {
 
 /* Mobile */
 @media only screen
-and (min-width: 850px)
-and (max-width: 1400px){
+and (min-width: 300px)
+and (max-width: 767px){
 	#map{
-		height: 522px;
-		width: 600px;
+		width: 100%;
+	}
+	#map-fix{
+		position: relative !important;
+		top: initial !important;
+		left: -5px !important;
+	}
+	#prop-fix{
+		position: initial !important;
+	}
+	#property-listings{
+		position: relative;
+		left: -5px;
+	}
+	.splash-title{
+			top: initial !important;
+	}
+	#listings-row .filter-panel{
+		width: 100%;
+	}
+	#moveloc #autocomplete{
+			margin-left: initial;
+			width: initial;
+	}
+	#filter-panel-home{
+			top: initial !important;
+	}
+	.panel-default .img-rounded{
+		margin-top: 20px !important;
+		width: 50% !important;
+	}
+	.navbar-nav{
+		margin: 7px -15px !important;
+
+	}
+}
+@media only screen
+and (min-width: 768px)
+and (max-width: 849px){
+	#map{
+		height: 450px;
+		width: 400px;
+	}
+	#moveloc #autocomplete{
+			margin-left: initial;
+			width: initial;
+	}
+	#prop-fix{
+		margin-right: -10px;
+	}
+	#map-fix{
+
 	}
 	#listings-row #filter-panel{
 		width: initial;
+	}
+}
+@media only screen
+and (min-width: 850px)
+and (max-width: 950px){
+	#map{
+		height: 522px;
+		width: 400px;
+	}
+	#listings-row #filter-panel{
+		width: initial;
+	}
+	#moveloc #autocomplete{
+			margin-left: initial;
+			width: initial;
+	}
+	.navbar-right{
+		position: absolute;
+		right: 50px;
+	}
+	.navbar-nav{
+		margin-left: 50px !important;
+	}
+	.navbar-brand{
+		margin-left: -50px !important;
+	}
+}
+@media only screen
+and (min-width: 951px)
+and (max-width: 1100px){
+	#map{
+		height: 522px;
+		width: 480px;
+	}
+	#listings-row #filter-panel{
+		width: initial;
+	}
+	#moveloc #autocomplete{
+			margin-left: initial;
+			width: initial;
+	}
+}
+@media only screen
+and (min-width: 1101px)
+and (max-width: 1400px){
+	#map{
+		height: 522px;
+		width: 550px;
+	}
+	#listings-row #filter-panel{
+		width: initial;
+	}
+	#moveloc #autocomplete{
+			margin-left: initial;
+			width: initial;
 	}
 }
 
@@ -534,22 +639,5 @@ and (max-width: 1750px){
 		width: initial;
 	}
 }
-@media only screen
-and (min-width: 300px)
-and (max-width: 767px){
-	.splash-title{
-			top: initial !important;
-	}
-	#filter-panel-home{
-			top: initial !important;
-	}
-	.panel-default .img-rounded{
-		margin-top: 20px !important;
-		width: 50% !important;
-	}
-	.navbar-nav{
-		margin: 7px -15px !important;
 
-	}
-}
 /* MOBILE END */
