--- a/public/css/main.css
+++ b/public/css/main.css
@@ -518,10 +518,13 @@ and (max-width: 767px){
 		width: 100%;
 	}
 	#showmap{
-		width: 300px !important;
+		width: 100% !important;
+	}
+	.fotorama{
+		width: 100% !important;
 	}
 	.fotorama img{
-		width: 300px !important;
+		width: 100% !important;
 	}
 	#map-fix{
 		position: relative !important;
@@ -567,6 +570,15 @@ and (max-width: 849px){
 		height: 450px;
 		width: 400px;
 	}
+	#showmap{
+		width: 100% !important;
+	}
+	.fotorama{
+		width: 100% !important;
+	}
+	.fotorama img{
+		width: 100% !important;
+	}
 	#moveloc #autocomplete{
 			margin-left: initial;
 			width: initial;
@@ -595,6 +607,15 @@ and (max-width: 950px){
 			margin-left: initial;
 			width: initial;
 	}
+	#showmap{
+		width: 100% !important;
+	}
+	.fotorama{
+		width: 100% !important;
+	}
+	.fotorama img{
+		width: 100% !important;
+	}
 	.navbar-right{
 		position: absolute;
 		right: 50px;
@@ -613,6 +634,15 @@ and (max-width: 1100px){
 		height: 522px;
 		width: 480px;
 	}
+	#showmap{
+		width: 100% !important;
+	}
+	.fotorama{
+		width: 100% !important;
+	}
+	.fotorama img{
+		width: 100% !important;
+	}
 	#listings-row #filter-panel{
 		width: initial;
 	}
@@ -627,6 +657,15 @@ and (max-width: 1400px){
 	#map{
 		height: 522px;
 		width: 550px;
+	}
+	#showmap{
+		width: 100% !important;
+	}
+	.fotorama{
+		width: 100% !important;
+	}
+	.fotorama img{
+		width: 100% !important;
 	}
 	#listings-row #filter-panel{
 		width: initial;
@@ -643,6 +682,15 @@ and (max-width: 1750px){
 	#map{
 		height: 900px;
 		width: 750px;
+	}
+	#showmap{
+		width: 100% !important;
+	}
+	.fotorama{
+		width: 100% !important;
+	}
+	.fotorama img{
+		width: 100% !important;
 	}
 	#listings-row #filter-panel{
 		width: initial;
