main.css edited online with Bitbucket

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -192,7 +192,7 @@ img[src=""] {
 }
 .splash-section .splash-inner-media {
 	opacity: 0.6;
-	background-image: url(http://192.241.153.145/images/pic11.jpg);
+	background-image: url(https://www.suuty.com/images/pic11.jpg);
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
