--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
 h1, h2, h3, h4, p, ul, a, input, label, button{
-	font-family: 'Quicksand', serif !important;
+	font-family: 'Oxygen', serif !important;
 }
 html{
 	overflow-x: hidden;
