form creation complete

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,7 +16,9 @@ body {
 .bootstrap-datetimepicker-widget {
   display: block;
 }
-
+#checkboxform label{
+	display: block;
+}
 /* IMG */
 img[src=""] {
     display: none;
