--- a/public/css/main.css
+++ b/public/css/main.css
@@ -640,6 +640,10 @@ and (max-width: 849px){
 	#map-fix{
 
 	}
+	.panel-default .img-rounded{
+		margin-top: 20px !important;
+		width: 50% !important;
+	}
 	#listings-row #filter-panel{
 		width: initial;
 	}
@@ -676,6 +680,10 @@ and (max-width: 950px){
 	}
 	.navbar-brand{
 		margin-left: -50px !important;
+	}
+	.panel-default .img-rounded{
+		margin-top: 20px !important;
+		width: 50% !important;
 	}
 }
 @media only screen
