--- a/public/css/main.css
+++ b/public/css/main.css
@@ -709,6 +709,10 @@ and (max-width: 1100px){
 			margin-left: initial;
 			width: initial;
 	}
+	.panel-default .img-rounded{
+		margin-top: 20px !important;
+		width: 50% !important;
+	}
 }
 @media only screen
 and (min-width: 1101px)
