--- a/public/css/main.css
+++ b/public/css/main.css
@@ -647,6 +647,10 @@ and (max-width: 849px){
 	#listings-row #filter-panel{
 		width: initial;
 	}
+	.navbar-nav{
+		margin-right: -20px !important;
+
+	}
 }
 @media only screen
 and (min-width: 850px)
@@ -676,10 +680,7 @@ and (max-width: 950px){
 		right: 50px;
 	}
 	.navbar-nav{
-		margin-left: 50px !important;
-	}
-	.navbar-brand{
-		margin-left: -50px !important;
+		margin-right: -20px !important;
 	}
 	.panel-default .img-rounded{
 		margin-top: 20px !important;
@@ -712,6 +713,10 @@ and (max-width: 1100px){
 	.panel-default .img-rounded{
 		margin-top: 20px !important;
 		width: 50% !important;
+	}
+	.navbar-nav{
+		margin-right: -20px !important;
+
 	}
 }
 @media only screen
