google map text align center

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -330,6 +330,7 @@ body.modal-open{
 	white-space: nowrap;
 	overflow-x: hidden !important;
 	text-overflow: ellipsis;
+	text-align: center;
 }
 #showmap .gm-iv-address{
 	height: 55px;
