--- a/public/css/main.css
+++ b/public/css/main.css
@@ -85,7 +85,15 @@ img[src=""] {
 .fotorama__loaded .fotorama__img{
 	left: 0 !important;
 }
-
+/* CONTAINERS */
+.reviewform{
+	width: 500px;
+	margin-right: -20px;
+	margin: 0 auto;
+	background-color: #e5e5e5;
+	border: 1px solid #e6e6e6;
+}
+/**/
 /* PANELS */
 .panel-title{
 	color: #777;
