--- a/public/css/main.css
+++ b/public/css/main.css
@@ -100,6 +100,12 @@ img[src=""] {
 	background-color: #e5e5e5;
 	padding: 12px;
 }
+#listings-row p{
+	width: 350px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
 /* */
 /* IMG END */
 
