--- a/public/css/main.css
+++ b/public/css/main.css
@@ -702,6 +702,9 @@ and (max-width: 767px){
 	.colstyle{
 		margin-left: initial;
 	}
+	.panel-heading p{
+		width: 200px;
+	}
 }
 
 @media only screen
@@ -738,6 +741,9 @@ and (max-width: 849px){
 		margin-right: -20px !important;
 
 	}
+	.panel-heading p{
+		width: 200px;
+	}
 }
 @media only screen
 and (min-width: 850px)
@@ -768,6 +774,9 @@ and (max-width: 950px){
 	.panel-default .img-rounded{
 		margin-top: 20px !important;
 		width: 50% !important;
+	}
+	.panel-heading p{
+		width: 200px;
 	}
 }
 @media only screen
@@ -801,6 +810,9 @@ and (max-width: 1100px){
 		margin-right: -20px !important;
 
 	}
+	.panel-heading p{
+		width: 200px;
+	}
 }
 @media only screen
 and (min-width: 1101px)
@@ -828,6 +840,9 @@ and (max-width: 1400px){
 	.input-lg{
 		font-size: 12px;
 		font-weight: bold;
+	}
+	.panel-heading p{
+		width: 200px;
 	}
 }
 
