--- a/public/css/main.css
+++ b/public/css/main.css
@@ -773,6 +773,9 @@ and (max-width: 767px){
 		display: inline-block;
 		margin: -7px;
 	}
+	.stickysecond{
+		display: none;
+	}
 }
 
 @media only screen
