--- a/public/css/main.css
+++ b/public/css/main.css
@@ -150,6 +150,13 @@ img[src=""] {
 	background-color: #e5e5e5;
 	border: 1px solid #e6e6e6;
 }
+.requestform{
+	width: 100%;
+	margin-right: -20px;
+	margin: 0 auto;
+	background-color: #e5e5e5;
+	border: 1px solid #e6e6e6;
+}
 /**/
 /* PANELS */
 .panel-title{
@@ -779,11 +786,11 @@ and (max-width: 767px){
 	.stickysecond{
 		display: none;
 	}
-	#ws-walkscore-tile iframe{
-		width: 380px;
-	}
 	.reviewform{
 		width: 380px;
+	}
+	#ws-walkscore-tile iframe{
+		width: 300px;
 	}
 }
 
@@ -821,6 +828,9 @@ and (max-width: 849px){
 		margin-right: -20px !important;
 
 	}
+	#ws-walkscore-tile iframe{
+		width: 380px;
+	}
 }
 @media only screen
 and (min-width: 850px)
@@ -852,6 +862,9 @@ and (max-width: 950px){
 		margin-top: 20px !important;
 		width: 50% !important;
 	}
+	#ws-walkscore-tile iframe{
+		width: 300px;
+	}
 }
 @media only screen
 and (min-width: 951px)
@@ -882,7 +895,6 @@ and (max-width: 1100px){
 	}
 	.navbar-nav{
 		margin-right: -20px !important;
-
 	}
 }
 @media only screen
@@ -932,6 +944,22 @@ and (max-width: 1750px){
 	}
 	#listings-row #filter-panel{
 		width: initial;
+	}
+}
+@media (min-width: 1200px){
+.singleprop{
+    width: 1500px !important;
+	}
+}
+
+@media (min-width: 992px) and (max-width: 1199px){
+.singleprop{
+    width: 970px !important;
+	}
+}
+@media (min-width: 768px) and (max-width: 991px){
+.singleprop{
+    width: 750px !important;
 	}
 }
 
