--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,6 +5,7 @@ h1, h2, h3, h4, h5, p, ul, a, input, label, button, select, body, section{
  color: #111; font-family: 'Helvetica Neue', sans-serif; font-size: 275px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center;*/
 #app{
 	border-top: 5px solid #00a79d;
+	overflow-x: hidden;
 }
 #appname{
 	margin-right: 50px;
@@ -793,9 +794,6 @@ and (max-width: 767px){
 	.reviewform{
 		width: 380px;
 	}
-	#ws-walkscore-tile iframe{
-		width: 300px;
-	}
 }
 
 @media only screen
@@ -832,9 +830,6 @@ and (max-width: 849px){
 		margin-right: -20px !important;
 
 	}
-	#ws-walkscore-tile iframe{
-		width: 380px;
-	}
 }
 @media only screen
 and (min-width: 850px)
@@ -865,9 +860,6 @@ and (max-width: 950px){
 	.panel-default .img-rounded{
 		margin-top: 20px !important;
 		width: 50% !important;
-	}
-	#ws-walkscore-tile iframe{
-		width: 300px;
 	}
 }
 @media only screen
