--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,6 +47,14 @@ select{
 	font-size: 15px;
 	font-weight: bold;
 }
+.wrap{
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+}
 .pref-search::-webkit-input-placeholder {
     font-weight: bold;
 }
