--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -21,7 +21,9 @@ body {
   position: relative;
   width: 100%;
   height: 100vh;
-  font-family: Montserrat;
+  overflow-x: hidden;
+  overflow-y: hidden;
+
 }
 
 .wrap {
@@ -32,7 +34,7 @@ body {
 }
 
 .text {
-  color: #fbae17;
+  color: rgb(58, 194, 192);
   display: inline-block;
   margin-left: 5px;
 }
@@ -50,13 +52,13 @@ body {
     width: $width;
     height: $height;
     border-radius: 50%;
-    background-color: #fbae17;
+    background-color: rgb(58, 194, 192);
     transform-origin: 50%;
-    animation: bounce 500ms alternate infinite ease;
+    animation: bouncing 500ms alternate infinite ease;
   }
 }
 
-@keyframes bounce {
+@keyframes bouncing {
   0% {
     top: $bounce_height;
     height: 5px;
