--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,6 +25,37 @@ body {
 select{
 	text-align-last: center;
 }
+/* mfp container magnificPopup*/
+.prop_thumb{
+	border: 1px solid #ddd;
+ 	border-radius: 4px;
+ 	padding: 5px;
+}
+.prop_thumb:hover{
+	box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+.mfp-with-zoom .mfp-container,
+.mfp-with-zoom.mfp-bg {
+  opacity: 0;
+  -webkit-backface-visibility: hidden;
+  /* ideally, transition speed should match zoom duration */
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+
+.mfp-with-zoom.mfp-ready .mfp-container {
+    opacity: 1;
+}
+.mfp-with-zoom.mfp-ready.mfp-bg {
+    opacity: 0.8;
+}
+
+.mfp-with-zoom.mfp-removing .mfp-container,
+.mfp-with-zoom.mfp-removing.mfp-bg {
+  opacity: 0;
+}
 .modal-backdrop.fade.in {
 	opacity: 0.5;
 	filter: alpha(opacity=50);
