fixed and changed street view toggle

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -559,6 +559,9 @@ body.modal-open{
   text-overflow: ellipsis;
   width: 400px;
 }
+#floating-panel{
+	position: relative; float: right; top: 50px; z-index: 99; height: 4px;
+}
 /* MAP END */
 
 
